[package]
name = "async-graphql-check"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = { version = "7.0.16", features = ["dataloader"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
async-graphql-actix-web = "7.0.16"
