[package]
name = "async-graphql-check"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-graphql = {git = "https://github.com/andreievg/async-graphql.git", rev = "a8df009f5c235ceb23c1208b7c69fa205a36c279", version = "7.0.16", features = ["dataloader", "chrono"] }
async-graphql-actix-web = {package = "async-graphql-actix-web", git = "https://github.com/andreievg/async-graphql.git",  version = "7.0.16", rev = "a8df009f5c235ceb23c1208b7c69fa205a36c279" }


tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
async-trait = "0.1.88"

